--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
-//@import url(./reset.scss);
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 @import './assets/reset.scss';
+
 
 *,
 *::after, 
@@ -12,6 +13,12 @@
 html {
   font-size: 16px;
   line-height: 1.2;
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
+  font-variation-settings:
+    "slnt" 0;
 }
 
 .container {
