--- a/src/components/result/result.scss
+++ b/src/components/result/result.scss
@@ -8,6 +8,9 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    @media (max-width: 400px) {
+      font-size: 22px;
+    }
   }
   &__btn {
     background-color: rgb(212, 37, 37);
@@ -18,6 +21,10 @@
     border: none;
     cursor: pointer;
     transition: all .3s linear;
+    @media (max-width: 400px) {
+      font-size: 16px;
+      padding: 10px;
+    }
   }
   &__list {
     display: flex;
@@ -35,6 +42,14 @@
     font-size: 22px;
     font-weight: 500;
     color: #166363;
+    @media (max-width: 850px) {
+      width: 100%;
+    }
+    @media (max-width: 360px) {
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 6px;
+    }
   }
   &__card {
     padding-bottom: 60px;
@@ -45,6 +60,9 @@
     width: 800px;
     padding: 30px;
     border-radius: 15px;
+    @media (max-width: 850px) {
+      width: 100%;
+    }
   }
   &__cart-question {
     font-size: 20px;
